update sidebar styles, rename homepage to dashboard

--- a/app/components/SideBar/styles.css
+++ b/app/components/SideBar/styles.css
@@ -1,6 +1,6 @@
 .sideBar { /* stylelint-disable */
   height: 100%;
-  width: 200px;
+  width: 10%;
   background-color: #a3b0c6;
   position: absolute;
   z-index: 1;
