--- a/app/containers/ContactCard/styles.css
+++ b/app/containers/ContactCard/styles.css
@@ -1,7 +1,8 @@
 .contactCard { /* stylelint-disable */
   border-bottom: solid #ccc 1px;
   padding-bottom: 10px;
-  margin-left: 200px;
+  margin-left: 5%;
+  margin-right: 10%;
 }
 
 .btnContacted{
