--- a/app/components/SideBar/styles.css
+++ b/app/components/SideBar/styles.css
@@ -1,8 +1,22 @@
-.sideBar { /* stylelint-disable */
+/*
+.sideBar { 
   height: 100%;
   width: 10%;
   background-color: #a3b0c6;
   position: absolute;
   z-index: 1;
   overflow: auto;
+}*/
+
+.sidebarWrapper{
+  height: 100vh;
+  width: 200px;
+  background-color: #6390d8;
+  position: absolute;
+}
+.sidebarNav{
+
+}
+.sidebarItem{
+  list-style: none;
 }
