--- a/app/containers/App/styles.css
+++ b/app/containers/App/styles.css
@@ -7,3 +7,25 @@
 .container {
   display: block;
 }
+
+.sidebar {
+    display: none;
+    border: 1px solid black;
+}
+
+@media (min-width: 768px) {
+    .sidebar {
+        position: fixed;
+        top: 51px;
+        bottom: 0;
+        left: 0;
+        z-index: 1000;
+        display: block;
+        padding: 20px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        /* Scrollable contents if viewport is shorter than content. */
+        background-color: #f5f5f5;
+        border-right: 1px solid #eee;
+    }
+}
