style: Allow user to how/hide Compose pane with new button
The last commit made a lot of improvements to the layout/appearance of the ContactCard component, but didn't actually add much functionality. Now, the button I created actually works to show/hide the Compose pane.

There are also a number of other style/layout improvements to ContactCard in this commit.

--- a/app/containers/ContactCard/styles.css
+++ b/app/containers/ContactCard/styles.css
@@ -4,9 +4,9 @@
 }
 
 .buttonGroup {
-  position: absolute;
-  top: 5px;
-  right: 5px;
+  /*position: absolute;*/
+  /*top: 5px;*/
+  /*right: 5px;*/
 }
 
 .btnEdit{
@@ -27,21 +27,6 @@
   color: white;
 }
 
-.btnContacted{
-  background-color: #bbb;
-  position: relative;
-  top: -7px;
-  right: -12px;
-}
-.btnContacted:hover{
-  background-color: #5bcf64;
-  border-color: #5bcf64;
-  color: white;
-  position: relative;
-  top: -7px;
-  right: -12px;
-}
-
 .avatarColumn {
   width: 100px;
   height: 100%;
@@ -54,6 +39,10 @@
   display: inline-block;
   position: relative;
   left: -13px;
+}
+
+.contactInfo h3 {
+  margin-top: 0;
 }
 
 .contactName {
@@ -73,32 +62,50 @@
   padding: 10px 0;
 }
 
-input{
-  padding: 5px 0;
-  margin: 5px 0;
-}
-
-input[type=checkbox]{
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
-}
-
-/* Default State */
-.notesAndCompose{
-  display: none;
-}
-
-/* Toggled State */
-input[type=checkbox]:checked ~ .notesAndCompose{
-  display: block;
-}
-
 textarea{
   width: 795px;
 }
 
 .contactNowToggleBar {
+  margin: 0;
+  margin-bottom: -16px;
+  margin-left: -16px;
+  margin-right: -16px;
+}
+.contactNowToggleBarExpanded {
+  margin: 0;
+  margin-left: -16px;
+  margin-right: -16px;
+}
+.contactNowToggleBar:hover, .contactNowToggleBarExpanded:hover {
+  background-color: #ccc;
+}
+
+.contactNowToggleButton {
   background-color: #eee;
-  margin-bottom: 0px;
+  width: 100%;
+  -moz-border-radius-topleft: 0;
+  border-radius: 0 0 4px 4px;
+}
+.contactNowToggleBarExpanded .contactNowToggleButton {
+  border-radius: 0;
+}
+.contactNowToggleButton:hover {
+  background-color: #ccc;
+}
+.contactNowToggleButton:focus {
+  outline:0;
+  background-color: #eee;
+}
+
+.justContacted {
+  background-color: #eee;
+  min-width: 140px;
+  max-width: 140px;
+  float: right;
+}
+.justContacted:hover {
+  background-color: #5bcf64;
+  border-color: #5bcf64;
+  color: white;
 }
