--- a/app/containers/ContactCard/styles.css
+++ b/app/containers/ContactCard/styles.css
@@ -109,3 +109,37 @@ textarea{
   border-color: #5bcf64;
   color: white;
 }
+
+.formFieldLabel, .formField {
+  position: relative;
+  margin: 1.5em 0;
+}
+.formFieldLabel label,
+.formField input:not([type=submit]):not([type=file]) {
+  font-size: 1.1em;
+  font-weight: normal;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  /*transform: translateX(-50%);*/
+}
+.formFieldLabel label {
+  right: 0;
+}
+
+.formField input:not([type=submit]):not([type=file]) {
+  margin: 0;
+  border: solid 1px #dcdcdc;
+  border-radius: 8px;
+  padding: 5px;
+  outline: none;
+  transition: box-shadow 0.3s, border 0.3s;
+  -moz-transition: box-shadow 0.3s, border 0.3s;
+  -webkit-transition: box-shadow 0.3s, border 0.3s;
+}
+.formField input:not([type=submit]):not([type=file]):focus {
+  border: solid 1px #707070;
+  box-shadow: 0 0 5px 1px #969696;
+  -moz-box-shadow: 0 0 5px 1px #969696;
+  -webkit-box-shadow: 0 0 5px 1px #969696;
+}
