--- a/app/containers/AddContactButton/styles.css
+++ b/app/containers/AddContactButton/styles.css
@@ -1,3 +1,36 @@
-.addContactButton { /* stylelint-disable */
+.modalHeader {
+  padding-left: 5%;
+  margin-bottom: 30px;
+}
+.modalHeader h1 {
+  font: "Lucida Sans Unicode";
+  font-size: 2em;
+}
+.modalHeader h4 {
+  font-size: 1em;
+}
+.modalContent {
+  padding: 15px 30px;
+  background-color: #edf3ff;
+}
 
+.formFieldContainer {
+  margin: 8px;
+  background-color: white;
+  padding: 5px;
+  border-radius: 4px;
+  border: 1px solid #d5dbe8;
+}
+.formField {
+  width:100%;
+  height: 100%;
+}
+.notes {
+  height: 100px;
+}
+.submitAddContactBtn {
+  width: 100%;
+  background-color: #fc7a76;
+  color: white;
+  font-weight: bold;
 }
