--- a/app/components/SideBar/styles.css
+++ b/app/components/SideBar/styles.css
@@ -1,9 +1,10 @@
 .sidebarWrapper {
   height: 100vh;
   width: 200px;
-  background-color: #6390d8;
+  background-color: #6390D8;
   position: absolute;
 }
+
 .sidebarItem {
   list-style: none;
 }
