feat: Complete Update Contact functionality
In this commit:
 - The form now not only allows the user to update the contact's info; it also updates the redux state and local react state correctly.
 - When the update request is still pending, the form controls are disabled.
 - The form displays an error message if the contact failed to update.
 - There is now an appStatus branch of Redux State, which tracks things like which contacts are currently being edited.

--- a/app/containers/ContactCard/styles.css
+++ b/app/containers/ContactCard/styles.css
@@ -128,6 +128,7 @@ textarea{
 }
 
 .formField input:not([type=submit]):not([type=file]) {
+  width: 100%;
   margin: 0;
   border: solid 1px #dcdcdc;
   border-radius: 8px;
@@ -142,4 +143,19 @@ textarea{
   box-shadow: 0 0 5px 1px #969696;
   -moz-box-shadow: 0 0 5px 1px #969696;
   -webkit-box-shadow: 0 0 5px 1px #969696;
+}
+
+.formControls {
+  margin: 20px 0;
+}
+
+.editCancelButton {
+  position: relative;
+  right: -30px;
+}
+.editSubmitButton {
+}
+
+.formErrorMessage {
+  color: red;
 }
