feat: Validate Update Contact form (client + server)
The Update Contact form now has frontend and backend validation. The frontend validation displays errors and warnings for the user when they blur a field, and also when they try submitting. The backend validation responds with an error code and message.

--- a/app/containers/ContactCard/styles.css
+++ b/app/containers/ContactCard/styles.css
@@ -110,11 +110,15 @@ textarea{
   color: white;
 }
 
-.formFieldLabel, .formField {
+.formFieldRow {
+  height: 5em;
+}
+
+.formFieldLabelDiv, .formField {
   position: relative;
   margin: 1.5em 0;
 }
-.formFieldLabel label,
+.formFieldLabelDiv label,
 .formField input:not([type=submit]):not([type=file]) {
   font-size: 1.1em;
   font-weight: normal;
@@ -123,11 +127,11 @@ textarea{
   transform: translateY(-50%);
   /*transform: translateX(-50%);*/
 }
-.formFieldLabel label {
+.formFieldLabelDiv label {
   right: 0;
 }
 
-.formField input:not([type=submit]):not([type=file]) {
+.formField {
   width: 100%;
   margin: 0;
   border: solid 1px #dcdcdc;
@@ -138,11 +142,18 @@ textarea{
   -moz-transition: box-shadow 0.3s, border 0.3s;
   -webkit-transition: box-shadow 0.3s, border 0.3s;
 }
-.formField input:not([type=submit]):not([type=file]):focus {
+.formField {
   border: solid 1px #707070;
   box-shadow: 0 0 5px 1px #969696;
   -moz-box-shadow: 0 0 5px 1px #969696;
   -webkit-box-shadow: 0 0 5px 1px #969696;
+}
+.formFieldError,
+.formFieldError:focus {
+  border-color: red;
+  box-shadow: 0 0 5px 1px red;
+  -moz-box-shadow: 0 0 5px 1px red;
+  -webkit-box-shadow: 0 0 5px 1px red;
 }
 
 .formControls {
@@ -156,6 +167,14 @@ textarea{
 .editSubmitButton {
 }
 
+.formErrorMessage, .formWarningMessage {
+  margin: 1px 0;
+  /*height: 14px;*/
+}
 .formErrorMessage {
   color: red;
+}
+
+.formWarningMessage {
+  color: #df8e00;
 }
