feat: Add login files
I had created these previously and intended to include them in a previous commit when I set up the Login route. I'm adding them now.

--- a/internals/generators/container/index.js.hbs
+++ b/internals/generators/container/index.js.hbs
@@ -38,7 +38,7 @@ export class {{ properCase name }} extends React.Component { // eslint-disable-l
 
 {{#if wantActionsAndReducer}}
 function mapStateToProps(state) {
-  return { state: state };
+  return { state };
 }
 {{/if}}
 
