--- a/app/containers/Dashboard/styles.css
+++ b/app/containers/Dashboard/styles.css
@@ -1,8 +1,8 @@
-.dashboardHeader{
+.dashboardHeader {
   height: 40px;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  background-color: #dedede;
+  background-color: #DEDEDE;
 }
